--- a/index.css
+++ b/index.css
@@ -43,6 +43,21 @@ html, body {
 
 #submit {
   max-width: 12%;
+  margin-right: 2%;
+}
+
+#control-container {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  /*border: 1px solid red;*/
+}
+
+#control-container input {
+  margin-left: 2%;
 }
 
 #bottom-container {
