--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@ html, body {
   height: 100%;
   padding: 0;
   margin: 0;
-  color: #3A4145;
-  font-family: 'Fira Sans', sans-serif;
+  /*color: #3A4145;
+  font-family: 'Fira Sans', sans-serif;*/
 }
 
 #main-container {
