--- a/index.css
+++ b/index.css
@@ -18,9 +18,9 @@ html, body {
   font-family: 'Fira Sans', sans-serif;*/
 }
 
-#main-container {
+.main-container {
   width: 100%;
-  height: 70%;
+  height: 80%;
 
   display: flex;
   flex-direction: column;
@@ -29,16 +29,39 @@ html, body {
   /*border: 1px solid red;*/
 }
 
-#top-container {
-  width: 50%;
+.stacked-container {
+  width: 60%;
   height: 50%;
   margin: 1%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  /*border: 1px solid blue;*/
+}
+
+.left-container {
+  width: 90%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  /*border: 1px solid blue;*/
+  /*border: 1px solid red;*/
+}
+
+.right-container {
+  width: 10%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  /*border: 1px solid red;*/
 }
 
 #submit {
@@ -46,7 +69,7 @@ html, body {
   margin-right: 2%;
 }
 
-#control-container {
+.control-container {
   width: 100%;
 
   display: flex;
@@ -56,19 +79,8 @@ html, body {
   /*border: 1px solid red;*/
 }
 
-#control-container input {
+.control-container input {
   margin-left: 2%;
-}
-
-#bottom-container {
-  width: 50%;
-  height: 50%;
-  margin: 1%;  
-
-  display: flex;
-  flex-direction: column;
-
-  /*border: 1px solid green;*/
 }
 
 .input-field {
